--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -20,4 +20,9 @@
 .formAndImageContainer {
   display: flex;
   justify-content: space-between;
+  width: 90%;
+}
+
+.loginImage {
+  max-width: 80vh;
 }
