--- a/src/components/Login/LoginForm.module.css
+++ b/src/components/Login/LoginForm.module.css
@@ -1,5 +1,5 @@
 .loginForm {
-  width: 50vh;
+  min-width: 387px;
   padding: 20px;
 }
 
@@ -16,7 +16,7 @@
   border: 1px solid var(--color-gray-1);
   border-radius: 6px;
   font-size: 16px;
-  min-height: 25px;
+  min-height: 30px;
   width: -webkit-fill-available;
 }
 
@@ -52,16 +52,17 @@
 
 .submitButton {
   width: 100%;
+  height: 54px;
   padding: 12px;
   background-color: var(--color-gray-2);
   border: none;
-  border-radius: 4px;
+  border-radius: 6px;
   color: var(--color-white);
   font-weight: 600;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .submitButton:hover {
