--- a/src/components/Home/MyBalances/MyBalances.module.css
+++ b/src/components/Home/MyBalances/MyBalances.module.css
@@ -9,5 +9,10 @@
   display: flex;
   flex-direction: row;
   gap: 15px;
-  margin-top: 25px;
+}
+
+.myBalancesContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
