--- a/src/components/Home/SidebarHome/SidebarHome.module.css
+++ b/src/components/Home/SidebarHome/SidebarHome.module.css
@@ -1,8 +1,7 @@
 .sidebar {
   background-color: var(--color-blue-1);
   color: white;
-  width: 250px;
-  height: 100vh;
+  height: 100%;
   padding-right: 20px;
   display: flex;
   flex-direction: column;
