--- a/src/components/Home/MyBalances/MyBalances.module.css
+++ b/src/components/Home/MyBalances/MyBalances.module.css
@@ -8,7 +8,7 @@
 .balancesContainer {
   display: flex;
   flex-direction: row;
-  gap: 15px;
+  justify-content: space-between;
 }
 
 .myBalancesContainer {
