--- a/src/components/Exchange/ExchangeSelector/ExchangeSelector.module.css
+++ b/src/components/Exchange/ExchangeSelector/ExchangeSelector.module.css
@@ -1,3 +1,12 @@
+.exchangeContainer {
+  margin: 0 auto;
+  padding: 20px;
+  height: 100% !important;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+}
+
 .exchangeTitle {
   font-size: 28px;
   font-weight: 600;
@@ -11,44 +20,53 @@
   line-height: 21.79px;
   text-align: left;
   color: var(--color-blue-2);
-}
-
-.exchangeContainer {
-  height: 100% !important;
-}
-
-.exchangeBalance {
-  color: var(--color-blue-2);
   margin-bottom: 20px;
 }
 
 .inputGroup {
   margin-bottom: 20px;
+  width: 40%;
 }
 
 .inputGroup label {
   display: block;
   margin-bottom: 5px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21.79px;
+  text-align: left;
 }
 
-.inputWithCurrency {
+.inputRow {
   display: flex;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  overflow: hidden;
-  width: 50%;
+  gap: 10px;
 }
 
-.inputWithCurrency select {
+.currencySelect {
+  width: 80px;
   padding: 10px;
-  border: none;
-  background-color: #f0f0f0;
+  border: 1px solid var(--color-gray-1);
+  border-radius: 6px;
+  background-color: #f8f8f8;
 }
 
-.inputWithCurrency input {
+.amountInput {
   flex-grow: 1;
   padding: 10px;
-  border: none;
+  border: 1px solid var(--color-gray-1);
+  border-radius: 6px;
+}
+
+.exchangeRate {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 20px;
+}
+
+.contentWrapper {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .buttonGroup {
@@ -56,6 +74,7 @@
   justify-content: flex-start;
   margin-top: 20px;
   gap: 30px;
+  margin-top: auto;
 }
 
 .backButton,
