--- a/src/components/Exchange/TransactionSummary/TransactionSummary.module.css
+++ b/src/components/Exchange/TransactionSummary/TransactionSummary.module.css
@@ -129,7 +129,7 @@
 
 .modalContent {
   background-color: white;
-  padding: 20px;
+  padding: 5vh 9vh;
   border-radius: 8px;
   text-align: center;
   position: relative;
@@ -153,9 +153,18 @@
 
 .modalContent h3 {
   margin-bottom: 10px;
-  color: #008080;
+  color: var(--color-blue-1);
+
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 38.13px;
+  text-align: center;
 }
 
 .modalContent p {
   margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.79px;
+  text-align: center;
 }
