--- a/src/components/Login/LoginForm/LoginForm.module.css
+++ b/src/components/Login/LoginForm/LoginForm.module.css
@@ -28,6 +28,24 @@
   box-sizing: border-box;
 }
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loadingSpinnerButton {
+  border: 3px solid #ffffff;
+  border-top: 3px solid var(--color-blue-2);
+  border-radius: 50%;
+  width: 17px;
+  height: 17px;
+  animation: spin 1s linear infinite;
+}
+
 .inputIcons {
   position: absolute;
   right: 10px;
@@ -87,6 +105,7 @@
   transform: perspective(1000px) translateZ(0);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   will-change: transform, background-color, color;
+  text-align: -webkit-center;
 }
 
 .submitButton:hover {
