--- a/src/components/Home/Inicio/Inicio.module.css
+++ b/src/components/Home/Inicio/Inicio.module.css
@@ -4,6 +4,12 @@
   max-width: 70%;
 }
 
+@media screen and (max-width: 1300px) {
+  .userInfoContainer {
+    max-width: 100%;
+  }
+}
+
 .credentialsExpired,
 .credentialsExpired button {
   font-family: Open Sans;
