--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,6 +47,24 @@
   color: var(--color-white);
 }
 
+.loadingSpinnerButton {
+  border: 3px solid #ffffff;
+  border-top: 3px solid var(--color-blue-2);
+  border-radius: 50%;
+  width: 17px;
+  height: 17px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0 !important;
